# integracja-system-w

./: ComparisonData.cpp  ComparisonData.h  helperFunctions.cpp  helperFunctions.h  includes.h  indexAssigners.h  main.cpp  requestHandlingAndRouting.cpp  requestHandlingAndRouting.h  server.cpp  server.h  wykresy.py
integracja systemów/: docker-compose.yml  readme.md
integracja systemów/back/: CMakeLists.txt  ComparisonData.cpp  ComparisonData.h  Dockerfile  data1.json  helperFunctions.cpp  helperFunctions.h  includes.h  indexAssigners.h  main.cpp  requestHandlingAndRouting.cpp  requestHandlingAndRouting.h  server.cpp  server.h  wykresy.py
integracja systemów/mysql/: Dockerfile  init.sql  my.cnf
